objects/GBU_Product_Summary__c.object
<CustomObject>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <picklist>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Critical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business PCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Notebooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Notebooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DesignJet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solutions Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Storage Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJ Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJ Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indigo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Std Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IWS Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LES Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LJ Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Enterprise Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Commercial Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other LES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Retail Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scitex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GBU Product Summary</relationshipLabel>
        <relationshipName>GBU_Product_Summary</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>GBU Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>GBU Product Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>GBU__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Primary__c</columns>
        <columns>Total_Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>GBU Product Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GBU Product Summary</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>